<resources>
    <string name="app_name" translatable="false">projetoApollo</string>
    <string name="nome" translatable="false">Nome</string>
    <string name="name" translatable="false">Name</string>
    <string name="Nome" translatable="false">Nome</string>
    <string name="Email" translatable="false">Email</string>
    <string name="Senha" translatable="false">Senha</string>
    <string name="Cadastrar" translatable="false">Cadastrar</string>
    <string name="Apollo_teck" translatable="false">Apollo Teck</string>
    <string name="acessar" translatable="false">Acessar</string>
    <string name="cadastre_se" translatable="false">Cadastre-se</string>
    <string name="navigation_drawer_open">Abrir Navegação</string>
    <string name="navigation_drawer_close">Fechar Navegação</string>
    <string name="voltar_para_o_login">Voltar para o Login</string>
    <string name="string_hotel_sp">O cliente estará hospedado no elegante Tivoli Mofarrej São Paulo, localizado no coração da cidade. Seu quarto é uma suíte executiva, decorada com estilo contemporâneo e conforto. Oferece uma cama king-size, área de estar espaçosa, banheiro em mármore com chuveiro de alta pressão e todas as comodidades modernas para uma estadia relaxante e luxuosa.</string>
    <string name="pontoturistico_sp">Confira os principais pontos Turisticos da cidade:</string>
</resources>